Fixed License spec for Nuget package and added tags

--- a/lib/L1PathFinder/L1PathFinder.csproj
+++ b/lib/L1PathFinder/L1PathFinder.csproj
@@ -4,11 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Claudio Musumeci</Authors>
     <Company />
-    <PackageLicenseExpression>MIT License</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageId>L1PathFinder</PackageId>
     <PackageProjectUrl>https://mikolalysenko.github.io/l1-path-finder/www/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/muscla87/l1-path-finder-csharp</RepositoryUrl>
     <PackageReleaseNotes>C# porting of original l1-path-finder project (https://github.com/mikolalysenko/l1-path-finder)</PackageReleaseNotes>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageTags>#pathfinding #astar #l1 #shortestpath</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
